# xpublish

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  dev-requirements.txt  noxfile.py  open_dataset.ipynb  publish.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  xpublish.py
.binder/: dask_config.yaml  environment.yml  postBuild  start  test.py
.github/: dependabot.yml
.github/workflows/: main.yaml  precommit.yml  pypipublish.yaml
docs/: Makefile  requirements.txt
docs/source/: api.md  api.rst  changelog.md  conf.py  contributing.rst  index.md  index.rst  installation.rst  plugins.rst  tutorial.rst
docs/source/_ext/: generate_openapi.py
docs/source/api/: endpoints.md  generate_openapi.py  included_plugins.md  index.md  plugins.md
docs/source/ecosystem/: index.md
docs/source/getting-started/: index.md  why-xpublish.md
docs/source/getting-started/tutorial/: dataset-provider-plugin.md  dataset-provider-plugin.py  dataset-router-plugin.md  dataset-router-plugin.py  dataset-router.md  dataset-router.py  datatrees.md  index.md  introduction.md  serving-multiple-datasets.md  using-plugins.md
docs/source/user-guide/: index.md  migrating-to-datatree.md  plugins.md
docs/source/user-guide/deployment/: index.md
examples/: README.md  demo.py  environment.yaml  lme.py  mean.py  open_dataset.ipynb  xyz_client.ipynb  xyz_server.ipynb
tests/: conftest.py  test_core.py  test_datatree.py  test_datatree_support.py  test_fsspec_compat.py  test_plugin_management.py  test_rest_api.py  test_zarr_compat.py  utils.py
xpublish/: __init__.py  accessor.py  cache.py  dependencies.py  info.py  rest.py  utils.py
xpublish/included_plugins/: dataset_info.py  module_version.py  plugin_info.py  zarr.py
xpublish/plugin/: __init__.py  base.py  manage.py
xpublish/plugins/: __init__.py  base.py  factory.py  hooks.py  load.py  manage.py  module_version.py  zarr.py
xpublish/plugins/included/: dask_client.py  dask_local_cluster.py  dataset_info.py  module_version.py  plugin_info.py  zarr.py
xpublish/routers/: __init__.py  base.py  common.py  factory.py  xyz.py  zarr.py
xpublish/utils/: api.py  cache.py  info.py  ows.py  zarr.py
